v1.4/markdown/asct-b/asct-b-vh-liver.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Liver v1.1

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Anna Maria Masci; Tim Kendall; Ayako Suzuki |
| **Creator ORCID(s):** | [0000-0003-1940-6740](https://orcid.org/0000-0003-1940-6740); [0000-0002-4174-2786](https://orcid.org/0000-0002-4174-2786); [0000-0003-1824-1067](https://orcid.org/0000-0003-1824-1067) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Ioannis Vlachos; Z. Gordon Jiang; Luke Boulter; Ellen M. Quardokus  |
| **Reviewer ORCID(s):** |[0000-0002-8849-808X](https://orcid.org/0000-0002-8849-808X); [0000-0003-0495-9940](https://orcid.org/0000-0003-0495-9940); [0000-0002-7954-6705](https://orcid.org/0000-0002-7954-6705); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2022-05-06|
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM456.SLDZ.399 |
| **Data Table:** | [Liver v1.1](https://hubmapconsortium.github.io/ccf-releases/v1.2/asct-b/ASCT-B_VH_Liver.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM456.SLDZ.399](https://doi.org/10.48539/HBM456.SLDZ.399) |
| **How to Cite This Data Table:** | Anna Maria Masci; Tim Kendall; Ayako Suzuki, HuBMAP ASCT+B Tables. Liver v1.1 [https://doi.org/10.48539/HBM456.SLDZ.399](https://doi.org/10.48539/HBM456.SLDZ.399) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2022. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on May 6, 2022. |
