v2.0/markdown/asct-b/asct-b-vh-liver.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Liver v1.2

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

Minor changes were made for Liver v1.2 to ensure all cell types were mapped to Cell Ontology or had a parent cell type that mapped to Cell Ontology. All genes and proteins were mapped to the Human Gene Ontology (HUGO) Gene Nomenclature Committee (HGNC).  

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Anna Maria Masci; Tim Kendall; Ayako Suzuki |
| **Creator ORCID(s):** | [0000-0003-1940-6740](https://orcid.org/0000-0003-1940-6740); [0000-0002-4174-2786](https://orcid.org/0000-0002-4174-2786); [0000-0003-1824-1067](https://orcid.org/0000-0003-1824-1067) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Ioannis Vlachos; Z. Gordon Jiang; Luke Boulter; Ellen M. Quardokus  |
| **Reviewer ORCID(s):** |[0000-0002-8849-808X](https://orcid.org/0000-0002-8849-808X); [0000-0003-0495-9940](https://orcid.org/0000-0003-0495-9940); [0000-0002-7954-6705](https://orcid.org/0000-0002-7954-6705); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2023-12-15|
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD033756; OT2OD026671 |
| **HuBMAP ID:** | HBM449.XCGD.289 |
| **Data Table:** | [Liver v1.2](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/asct-b-vh-liver.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM449.XCGD.289](https://doi.org/10.48539/HBM449.XCGD.289) |
| **How to Cite This Data Table:** | Anna Maria Masci; Tim Kendall; Ayako Suzuki, HuBMAP ASCT+B Tables. Liver v1.2 [https://doi.org/10.48539/HBM449.XCGD.289](https://doi.org/10.48539/HBM449.XCGD.289)|
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on December 15, 2023. |
